--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3"
 
     // Android UI
     implementation "androidx.appcompat:appcompat:1.1.0-rc01"
