--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3"
 
     // Android UI
-    implementation "androidx.appcompat:appcompat:1.2.0-alpha03"
-    implementation "com.google.android.material:material:1.2.0-alpha05"
+    implementation "androidx.appcompat:appcompat:1.2.0-beta01"
+    implementation "com.google.android.material:material:1.2.0-alpha06"
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
     implementation "androidx.cardview:cardview:1.0.0"
 
