--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
     // Rx
     implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.17"
 
     // DI
     implementation "org.koin:koin-core:2.0.1"
@@ -73,4 +73,18 @@ dependencies {
 
     // debug
     implementation "com.readystatesoftware.chuck:library:1.1.0"
+
+    // Mobius
+    implementation 'com.spotify.mobius:mobius-core:1.4.0-beta4'
+    implementation 'com.spotify.mobius:mobius-android:1.4.0-beta4'
+    implementation 'com.spotify.mobius:mobius-rx2:1.4.0-beta4'
+
+    // Test
+    testImplementation 'com.spotify.mobius:mobius-test:1.4.0-beta4'
+    testImplementation "junit:junit:4.13"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.lifecycle:lifecycle-runtime:2.2.0"
+    testImplementation "org.assertj:assertj-core:3.15.0"
+    testImplementation "org.hamcrest:hamcrest-library:1.3"
+    testImplementation "org.mockito:mockito-core:2.23.0"
 }
