--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.wisnu.epoxyexample"
-        minSdkVersion 19
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,9 +39,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3"
 
     // Android UI
-    implementation "androidx.appcompat:appcompat:1.2.0-beta01"
-    implementation "com.google.android.material:material:1.2.0-alpha06"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
+    implementation "androidx.appcompat:appcompat:1.3.0-alpha02"
+    implementation "com.google.android.material:material:1.3.0-alpha02"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.1"
     implementation "androidx.cardview:cardview:1.0.0"
 
     // Android Architecture
@@ -49,10 +49,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-reactivestreams:2.2.0"
 
     // Network
-    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:retrofit:2.6.2"
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
-    implementation "com.squareup.okhttp3:okhttp:3.12.1"
+    implementation "com.squareup.okhttp3:okhttp:3.12.2"
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
 
     // Rx
@@ -80,12 +80,12 @@ dependencies {
     implementation "com.readystatesoftware.chuck:library:1.1.0"
 
     // Mobius
-    implementation 'com.spotify.mobius:mobius-core:1.4.0-beta4'
-    implementation 'com.spotify.mobius:mobius-android:1.4.0-beta4'
-    implementation 'com.spotify.mobius:mobius-rx2:1.4.0-beta4'
+    implementation 'com.spotify.mobius:mobius-core:1.5.2'
+    implementation 'com.spotify.mobius:mobius-android:1.5.2'
+    implementation 'com.spotify.mobius:mobius-rx2:1.5.2'
 
     // Test
-    testImplementation 'com.spotify.mobius:mobius-test:1.4.0-beta4'
+    testImplementation 'com.spotify.mobius:mobius-test:1.5.2'
     testImplementation "junit:junit:4.13"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "androidx.lifecycle:lifecycle-runtime:2.2.0"
