--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
 
     // Android UI
     implementation "androidx.appcompat:appcompat:1.3.0-alpha02"
-    implementation "com.google.android.material:material:1.3.0-alpha02"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.1"
+    implementation "com.google.android.material:material:1.3.0-alpha03"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.2"
     implementation "androidx.cardview:cardview:1.0.0"
 
     // Android Architecture
@@ -50,9 +50,9 @@ dependencies {
 
     // Network
     implementation "com.squareup.retrofit2:retrofit:2.6.2"
-    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
-    implementation "com.squareup.okhttp3:okhttp:3.12.2"
+    implementation "com.squareup.okhttp3:okhttp:3.12.12"
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
 
     // Rx
@@ -77,19 +77,11 @@ dependencies {
     kapt "com.airbnb.android:epoxy-processor:3.7.0"
 
     // debug
-    implementation "com.readystatesoftware.chuck:library:1.1.0"
+    debugImplementation "com.github.chuckerteam.chucker:library:3.3.0"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.3.0"
 
     // Mobius
     implementation 'com.spotify.mobius:mobius-core:1.5.2'
     implementation 'com.spotify.mobius:mobius-android:1.5.2'
     implementation 'com.spotify.mobius:mobius-rx2:1.5.2'
-
-    // Test
-    testImplementation 'com.spotify.mobius:mobius-test:1.5.2'
-    testImplementation "junit:junit:4.13"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "androidx.lifecycle:lifecycle-runtime:2.2.0"
-    testImplementation "org.assertj:assertj-core:3.15.0"
-    testImplementation "org.hamcrest:hamcrest-library:1.3"
-    testImplementation "org.mockito:mockito-core:2.23.0"
 }
